--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <h1>COUCOU TEST</h1>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
   </body>
 </html>
